// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-generator snapshots should match ladder HTML snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>DUPR Ladder Results</title>
  
<style>
  :root {
    /* Color System */
    --color-primary: #2563eb;
    --color-primary-dark: #1d4ed8;
    --color-success: #059669;
    --color-success-light: #d1fae5;
    --color-warning: #d97706;
    --color-warning-light: #fef3c7;
    --color-muted: #6b7280;
    --color-muted-light: #9ca3af;

    /* Rating tier colors */
    --tier-high: #059669;
    --tier-high-bg: #d1fae5;
    --tier-mid: #2563eb;
    --tier-mid-bg: #dbeafe;
    --tier-low: #d97706;
    --tier-low-bg: #fef3c7;

    /* Surface colors */
    --surface-card: #ffffff;
    --surface-alt: #f9fafb;
    --border-color: #e5e7eb;

    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
    --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  }

  * { box-sizing: border-box; }
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
    margin: 0;
    padding: 20px;
    background: var(--surface-alt);
    color: #1f2937;
  }
  .container { max-width: 1200px; margin: 0 auto; }

  /* Typography */
  .page-title {
    font-size: 1.75rem;
    font-weight: 700;
    color: #111827;
    margin-bottom: 0.25rem;
  }
  .page-subtitle {
    font-size: 0.9rem;
    color: var(--color-muted);
    margin-bottom: 1rem;
  }

  /* Pool Cards */
  .pool {
    background: var(--surface-card);
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: var(--shadow-sm);
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .pool-header {
    padding: 1rem 1.25rem;
    color: white;
    font-weight: 600;
    font-size: 1.1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .pool-header.pool-a { background: linear-gradient(135deg, #059669 0%, #047857 100%); }
  .pool-header.pool-b { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
  .pool-header.pool-c { background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%); }
  .pool-header.pool-d { background: linear-gradient(135deg, #db2777 0%, #be185d 100%); }
  .pool-header.pool-default { background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); }

  .pool-name { font-size: 1.25rem; font-weight: 700; }
  .pool-meta { font-size: 0.85rem; opacity: 0.9; }

  /* Tables */
  table { width: 100%; border-collapse: collapse; }
  th, td { padding: 12px 16px; text-align: left; border-bottom: 1px solid var(--border-color); }
  th { background: var(--surface-alt); font-weight: 600; color: #374151; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; }
  tr:last-child td { border-bottom: none; }
  tr:hover { background: var(--surface-alt); }

  /* Ladder Rows */
  .ladder-row {
    padding: 0.75rem 1.25rem;
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--border-color);
  }
  .ladder-row:nth-child(even) { background-color: var(--surface-alt); }
  .ladder-row:last-child { border-bottom: none; }
  .ladder-row.unresolved { background-color: #fffbeb !important; }

  .rank-badge {
    width: 2rem;
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 0.85rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
    margin-right: 0.875rem;
    flex-shrink: 0;
  }
  .ladder-row:nth-child(even) .rank-badge { background: var(--surface-card); }

  /* Rating Badges */
  .rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-weight: 600;
    font-size: 0.95rem;
    padding: 0.35rem 0.65rem;
    border-radius: 6px;
  }
  .rating-high { background-color: var(--tier-high-bg); color: var(--tier-high); }
  .rating-mid { background-color: var(--tier-mid-bg); color: var(--tier-mid); }
  .rating-low { background-color: var(--tier-low-bg); color: var(--tier-low); }

  .badge-default {
    background-color: #fef3c7;
    color: #92400e;
    font-size: 0.7rem;
    padding: 0.2rem 0.4rem;
    margin-left: 0.35rem;
    border-radius: 4px;
    vertical-align: middle;
  }

  /* Player names */
  .player-name { font-weight: 600; font-size: 1rem; color: #1f2937; flex-grow: 1; }
  .player-name a { color: inherit; text-decoration: none; }
  .player-name a:hover { color: var(--color-primary); }
  .not-found { color: var(--color-muted-light); font-style: italic; }
  .player-link { color: var(--color-primary); text-decoration: none; }
  .player-link:hover { text-decoration: underline; }
  .profile-link {
    color: var(--color-muted-light);
    font-size: 0.9rem;
    margin-left: 0.5rem;
    text-decoration: none;
  }
  .profile-link:hover { color: var(--color-primary); }

  /* Team-specific styles */
  .team-rating { font-size: 1.1em; }
  .player-rating { font-size: 0.9em; color: var(--color-muted); }
  .team-dupr {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.1rem;
    font-weight: 700;
    padding: 0.35rem 0.75rem;
    border-radius: 6px;
  }
  .team-dupr.tier-highest { background: #dcfce7; color: #166534; }
  .team-dupr.tier-high { background: #dbeafe; color: #1e40af; }
  .team-dupr.tier-mid { background: #fef3c7; color: #92400e; }
  .team-dupr.tier-low { background: #fee2e2; color: #991b1b; }

  .team-players { display: flex; flex-wrap: wrap; gap: 0.5rem 1.5rem; }
  .player-cell { display: flex; align-items: center; gap: 0.5rem; }
  .individual-ratings {
    display: flex;
    gap: 0.5rem;
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.85rem;
    color: var(--color-muted);
  }
  .team-rank {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 1rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
  }
  .team-row:nth-child(even) .team-rank { background: var(--surface-card); }

  /* Summary */
  .summary-card {
    background: var(--surface-card);
    border-radius: 10px;
    padding: 1rem 1.25rem;
    margin-bottom: 1.5rem;
    border: 1px solid var(--border-color);
  }
  .summary-success { border-left: 4px solid var(--color-success); }
  .summary-warning { border-left: 4px solid var(--color-warning); }
  .unresolved-list {
    background: #fffbeb;
    border-radius: 8px;
    padding: 0.875rem 1rem;
    margin-top: 1rem;
    border: 1px solid #fcd34d;
  }
  .unresolved-list ul { margin: 0; padding-left: 1.25rem; }
  .unresolved-list li { color: #92400e; font-size: 0.9rem; }

  /* Header stats */
  .header-stats {
    display: flex;
    gap: 1.5rem;
    margin-top: 0.5rem;
    font-size: 0.9rem;
    color: var(--color-muted);
  }
  .header-stat { display: flex; align-items: center; gap: 0.35rem; }

  /* Mobile Team Cards (Partner DUPR) */
  .team-cards-mobile { display: none; }
  .team-card {
    background: var(--surface-card);
    border-radius: 10px;
    margin-bottom: 0.75rem;
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .team-card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.875rem 1rem;
    background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-rank {
    font-weight: 800;
    font-size: 1.25rem;
    color: #374151;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }
  .team-card-rank::before {
    content: '#';
    font-weight: 600;
    color: var(--color-muted-light);
    font-size: 1rem;
  }
  .team-card-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.15rem;
    font-weight: 700;
    padding: 0.4rem 0.875rem;
    border-radius: 8px;
  }
  .team-card-body { padding: 0; }
  .team-card-player {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.75rem 1rem;
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-player:last-child { border-bottom: none; }
  .team-card-player:nth-child(odd) { background: var(--surface-card); }
  .team-card-player:nth-child(even) { background: var(--surface-alt); }
  .team-card-player-name {
    font-weight: 600;
    font-size: 0.95rem;
    color: #1f2937;
    flex: 1;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .team-card-player-name a { color: inherit; text-decoration: none; }
  .team-card-player-name a:hover { color: var(--color-primary); }
  .team-card-player-name.not-found { color: var(--color-muted-light); font-style: italic; }
  .team-card-player-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.9rem;
    font-weight: 500;
    color: var(--color-muted);
    margin-left: 1rem;
    flex-shrink: 0;
  }

  /* Responsive */
  @media (max-width: 768px) {
    .page-title { font-size: 1.5rem; }
    .team-players { flex-direction: column; gap: 0.5rem; }
    .pool-header { flex-direction: column; gap: 0.5rem; align-items: flex-start; }
    .ladder-row { flex-wrap: wrap; }
    .header-stats { flex-direction: column; gap: 0.5rem; }

    /* Partner DUPR: Hide table, show cards on mobile */
    .partner-dupr-table { display: none; }
    .team-cards-mobile { display: block; padding: 0.75rem; }
  }

  /* Print styles */
  @media print {
    body { background: white !important; color: black !important; font-size: 10pt; padding: 0; }
    .container { max-width: 100% !important; padding: 0 !important; }
    .pool {
      box-shadow: none !important;
      border: 2px solid #000 !important;
      page-break-inside: avoid;
      margin-bottom: 1rem;
    }
    .pool-header {
      background: #f0f0f0 !important;
      color: black !important;
      border-bottom: 2px solid black !important;
      -webkit-print-color-adjust: exact;
      print-color-adjust: exact;
    }
    .pool-header.pool-a,
    .pool-header.pool-b,
    .pool-header.pool-c,
    .pool-header.pool-d,
    .pool-header.pool-default { background: #f0f0f0 !important; }
    .rating, .team-dupr { background: none !important; border: 1px solid #000; }
    .profile-link { display: none !important; }
    .summary-card { border: 1px solid #000 !important; }
    /* Print: show table, hide mobile cards */
    .partner-dupr-table { display: table !important; }
    .team-cards-mobile { display: none !important; }
    a { color: black !important; text-decoration: none !important; }
  }
</style>

</head>
<body>
  <div class="container">
    <h1 class="page-title">DUPR Ladder</h1>
    <p class="page-subtitle">[DATE]</p>

    
    <div class="summary-card summary-success">
      <div style="display: flex; align-items: center;">
        <span style="margin-right: 0.5rem;">[check-circle]</span>
        <span><strong>4/4 players resolved</strong></span>
      </div>
  </div>

    <div class="pool">
      <div class="pool-header pool-a">
        <span class="pool-name">POOL A</span>
        <span class="pool-meta">(4 players)</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">1</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">John Smith</span><a href="https://example.com/john-smith" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-high">4.25</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">2</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Jane Doe</span><a href="https://example.com/jane-doe" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.75</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">3</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Bob Wilson</span><a href="https://example.com/bob-wilson" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.25</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">4</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Alice Brown</span><a href="https://example.com/alice-brown" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-low">2.75</span>
      </div>
    </div>
  </div>
</body>
</html>"
`;

exports[`html-generator snapshots should match ladder HTML snapshot with unfound players 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>DUPR Ladder Results</title>
  
<style>
  :root {
    /* Color System */
    --color-primary: #2563eb;
    --color-primary-dark: #1d4ed8;
    --color-success: #059669;
    --color-success-light: #d1fae5;
    --color-warning: #d97706;
    --color-warning-light: #fef3c7;
    --color-muted: #6b7280;
    --color-muted-light: #9ca3af;

    /* Rating tier colors */
    --tier-high: #059669;
    --tier-high-bg: #d1fae5;
    --tier-mid: #2563eb;
    --tier-mid-bg: #dbeafe;
    --tier-low: #d97706;
    --tier-low-bg: #fef3c7;

    /* Surface colors */
    --surface-card: #ffffff;
    --surface-alt: #f9fafb;
    --border-color: #e5e7eb;

    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
    --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  }

  * { box-sizing: border-box; }
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
    margin: 0;
    padding: 20px;
    background: var(--surface-alt);
    color: #1f2937;
  }
  .container { max-width: 1200px; margin: 0 auto; }

  /* Typography */
  .page-title {
    font-size: 1.75rem;
    font-weight: 700;
    color: #111827;
    margin-bottom: 0.25rem;
  }
  .page-subtitle {
    font-size: 0.9rem;
    color: var(--color-muted);
    margin-bottom: 1rem;
  }

  /* Pool Cards */
  .pool {
    background: var(--surface-card);
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: var(--shadow-sm);
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .pool-header {
    padding: 1rem 1.25rem;
    color: white;
    font-weight: 600;
    font-size: 1.1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .pool-header.pool-a { background: linear-gradient(135deg, #059669 0%, #047857 100%); }
  .pool-header.pool-b { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
  .pool-header.pool-c { background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%); }
  .pool-header.pool-d { background: linear-gradient(135deg, #db2777 0%, #be185d 100%); }
  .pool-header.pool-default { background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); }

  .pool-name { font-size: 1.25rem; font-weight: 700; }
  .pool-meta { font-size: 0.85rem; opacity: 0.9; }

  /* Tables */
  table { width: 100%; border-collapse: collapse; }
  th, td { padding: 12px 16px; text-align: left; border-bottom: 1px solid var(--border-color); }
  th { background: var(--surface-alt); font-weight: 600; color: #374151; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; }
  tr:last-child td { border-bottom: none; }
  tr:hover { background: var(--surface-alt); }

  /* Ladder Rows */
  .ladder-row {
    padding: 0.75rem 1.25rem;
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--border-color);
  }
  .ladder-row:nth-child(even) { background-color: var(--surface-alt); }
  .ladder-row:last-child { border-bottom: none; }
  .ladder-row.unresolved { background-color: #fffbeb !important; }

  .rank-badge {
    width: 2rem;
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 0.85rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
    margin-right: 0.875rem;
    flex-shrink: 0;
  }
  .ladder-row:nth-child(even) .rank-badge { background: var(--surface-card); }

  /* Rating Badges */
  .rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-weight: 600;
    font-size: 0.95rem;
    padding: 0.35rem 0.65rem;
    border-radius: 6px;
  }
  .rating-high { background-color: var(--tier-high-bg); color: var(--tier-high); }
  .rating-mid { background-color: var(--tier-mid-bg); color: var(--tier-mid); }
  .rating-low { background-color: var(--tier-low-bg); color: var(--tier-low); }

  .badge-default {
    background-color: #fef3c7;
    color: #92400e;
    font-size: 0.7rem;
    padding: 0.2rem 0.4rem;
    margin-left: 0.35rem;
    border-radius: 4px;
    vertical-align: middle;
  }

  /* Player names */
  .player-name { font-weight: 600; font-size: 1rem; color: #1f2937; flex-grow: 1; }
  .player-name a { color: inherit; text-decoration: none; }
  .player-name a:hover { color: var(--color-primary); }
  .not-found { color: var(--color-muted-light); font-style: italic; }
  .player-link { color: var(--color-primary); text-decoration: none; }
  .player-link:hover { text-decoration: underline; }
  .profile-link {
    color: var(--color-muted-light);
    font-size: 0.9rem;
    margin-left: 0.5rem;
    text-decoration: none;
  }
  .profile-link:hover { color: var(--color-primary); }

  /* Team-specific styles */
  .team-rating { font-size: 1.1em; }
  .player-rating { font-size: 0.9em; color: var(--color-muted); }
  .team-dupr {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.1rem;
    font-weight: 700;
    padding: 0.35rem 0.75rem;
    border-radius: 6px;
  }
  .team-dupr.tier-highest { background: #dcfce7; color: #166534; }
  .team-dupr.tier-high { background: #dbeafe; color: #1e40af; }
  .team-dupr.tier-mid { background: #fef3c7; color: #92400e; }
  .team-dupr.tier-low { background: #fee2e2; color: #991b1b; }

  .team-players { display: flex; flex-wrap: wrap; gap: 0.5rem 1.5rem; }
  .player-cell { display: flex; align-items: center; gap: 0.5rem; }
  .individual-ratings {
    display: flex;
    gap: 0.5rem;
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.85rem;
    color: var(--color-muted);
  }
  .team-rank {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 1rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
  }
  .team-row:nth-child(even) .team-rank { background: var(--surface-card); }

  /* Summary */
  .summary-card {
    background: var(--surface-card);
    border-radius: 10px;
    padding: 1rem 1.25rem;
    margin-bottom: 1.5rem;
    border: 1px solid var(--border-color);
  }
  .summary-success { border-left: 4px solid var(--color-success); }
  .summary-warning { border-left: 4px solid var(--color-warning); }
  .unresolved-list {
    background: #fffbeb;
    border-radius: 8px;
    padding: 0.875rem 1rem;
    margin-top: 1rem;
    border: 1px solid #fcd34d;
  }
  .unresolved-list ul { margin: 0; padding-left: 1.25rem; }
  .unresolved-list li { color: #92400e; font-size: 0.9rem; }

  /* Header stats */
  .header-stats {
    display: flex;
    gap: 1.5rem;
    margin-top: 0.5rem;
    font-size: 0.9rem;
    color: var(--color-muted);
  }
  .header-stat { display: flex; align-items: center; gap: 0.35rem; }

  /* Mobile Team Cards (Partner DUPR) */
  .team-cards-mobile { display: none; }
  .team-card {
    background: var(--surface-card);
    border-radius: 10px;
    margin-bottom: 0.75rem;
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .team-card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.875rem 1rem;
    background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-rank {
    font-weight: 800;
    font-size: 1.25rem;
    color: #374151;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }
  .team-card-rank::before {
    content: '#';
    font-weight: 600;
    color: var(--color-muted-light);
    font-size: 1rem;
  }
  .team-card-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.15rem;
    font-weight: 700;
    padding: 0.4rem 0.875rem;
    border-radius: 8px;
  }
  .team-card-body { padding: 0; }
  .team-card-player {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.75rem 1rem;
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-player:last-child { border-bottom: none; }
  .team-card-player:nth-child(odd) { background: var(--surface-card); }
  .team-card-player:nth-child(even) { background: var(--surface-alt); }
  .team-card-player-name {
    font-weight: 600;
    font-size: 0.95rem;
    color: #1f2937;
    flex: 1;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .team-card-player-name a { color: inherit; text-decoration: none; }
  .team-card-player-name a:hover { color: var(--color-primary); }
  .team-card-player-name.not-found { color: var(--color-muted-light); font-style: italic; }
  .team-card-player-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.9rem;
    font-weight: 500;
    color: var(--color-muted);
    margin-left: 1rem;
    flex-shrink: 0;
  }

  /* Responsive */
  @media (max-width: 768px) {
    .page-title { font-size: 1.5rem; }
    .team-players { flex-direction: column; gap: 0.5rem; }
    .pool-header { flex-direction: column; gap: 0.5rem; align-items: flex-start; }
    .ladder-row { flex-wrap: wrap; }
    .header-stats { flex-direction: column; gap: 0.5rem; }

    /* Partner DUPR: Hide table, show cards on mobile */
    .partner-dupr-table { display: none; }
    .team-cards-mobile { display: block; padding: 0.75rem; }
  }

  /* Print styles */
  @media print {
    body { background: white !important; color: black !important; font-size: 10pt; padding: 0; }
    .container { max-width: 100% !important; padding: 0 !important; }
    .pool {
      box-shadow: none !important;
      border: 2px solid #000 !important;
      page-break-inside: avoid;
      margin-bottom: 1rem;
    }
    .pool-header {
      background: #f0f0f0 !important;
      color: black !important;
      border-bottom: 2px solid black !important;
      -webkit-print-color-adjust: exact;
      print-color-adjust: exact;
    }
    .pool-header.pool-a,
    .pool-header.pool-b,
    .pool-header.pool-c,
    .pool-header.pool-d,
    .pool-header.pool-default { background: #f0f0f0 !important; }
    .rating, .team-dupr { background: none !important; border: 1px solid #000; }
    .profile-link { display: none !important; }
    .summary-card { border: 1px solid #000 !important; }
    /* Print: show table, hide mobile cards */
    .partner-dupr-table { display: table !important; }
    .team-cards-mobile { display: none !important; }
    a { color: black !important; text-decoration: none !important; }
  }
</style>

</head>
<body>
  <div class="container">
    <h1 class="page-title">DUPR Ladder</h1>
    <p class="page-subtitle">[DATE]</p>

    
    <div class="summary-card summary-warning">
      <div style="display: flex; align-items: center;">
        <span style="margin-right: 0.5rem;">[exclamation-triangle]</span>
        <span><strong>2/4 players resolved</strong></span>
      </div>
  
      <div class="unresolved-list">
        <strong style="color: #92400e; font-size: 0.85rem;">Using default rating (2.5):</strong>
        <ul style="margin-top: 0.5rem;">
    <li>Unknown Player</li><li>Missing Person</li></ul></div></div>

    <div class="pool">
      <div class="pool-header pool-a">
        <span class="pool-name">POOL A</span>
        <span class="pool-meta">(4 players)</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">1</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Found Player</span><a href="https://example.com/found-player" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-high">4.00</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">2</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Another Found</span><a href="https://example.com/another-found" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.50</span>
      </div>
      <div class="ladder-row unresolved">
        <span class="rank-badge">3</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Unknown Player</span>
        </div>
        <span class="rating rating-mid">3.00</span><span class="badge-default">Default</span>
      </div>
      <div class="ladder-row unresolved">
        <span class="rank-badge">4</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Missing Person</span>
        </div>
        <span class="rating rating-low">2.50</span><span class="badge-default">Default</span>
      </div>
    </div>
  </div>
</body>
</html>"
`;

exports[`html-generator snapshots should match partner HTML snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Partner DUPR Results</title>
  
<style>
  :root {
    /* Color System */
    --color-primary: #2563eb;
    --color-primary-dark: #1d4ed8;
    --color-success: #059669;
    --color-success-light: #d1fae5;
    --color-warning: #d97706;
    --color-warning-light: #fef3c7;
    --color-muted: #6b7280;
    --color-muted-light: #9ca3af;

    /* Rating tier colors */
    --tier-high: #059669;
    --tier-high-bg: #d1fae5;
    --tier-mid: #2563eb;
    --tier-mid-bg: #dbeafe;
    --tier-low: #d97706;
    --tier-low-bg: #fef3c7;

    /* Surface colors */
    --surface-card: #ffffff;
    --surface-alt: #f9fafb;
    --border-color: #e5e7eb;

    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
    --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  }

  * { box-sizing: border-box; }
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
    margin: 0;
    padding: 20px;
    background: var(--surface-alt);
    color: #1f2937;
  }
  .container { max-width: 1200px; margin: 0 auto; }

  /* Typography */
  .page-title {
    font-size: 1.75rem;
    font-weight: 700;
    color: #111827;
    margin-bottom: 0.25rem;
  }
  .page-subtitle {
    font-size: 0.9rem;
    color: var(--color-muted);
    margin-bottom: 1rem;
  }

  /* Pool Cards */
  .pool {
    background: var(--surface-card);
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: var(--shadow-sm);
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .pool-header {
    padding: 1rem 1.25rem;
    color: white;
    font-weight: 600;
    font-size: 1.1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .pool-header.pool-a { background: linear-gradient(135deg, #059669 0%, #047857 100%); }
  .pool-header.pool-b { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
  .pool-header.pool-c { background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%); }
  .pool-header.pool-d { background: linear-gradient(135deg, #db2777 0%, #be185d 100%); }
  .pool-header.pool-default { background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); }

  .pool-name { font-size: 1.25rem; font-weight: 700; }
  .pool-meta { font-size: 0.85rem; opacity: 0.9; }

  /* Tables */
  table { width: 100%; border-collapse: collapse; }
  th, td { padding: 12px 16px; text-align: left; border-bottom: 1px solid var(--border-color); }
  th { background: var(--surface-alt); font-weight: 600; color: #374151; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; }
  tr:last-child td { border-bottom: none; }
  tr:hover { background: var(--surface-alt); }

  /* Ladder Rows */
  .ladder-row {
    padding: 0.75rem 1.25rem;
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--border-color);
  }
  .ladder-row:nth-child(even) { background-color: var(--surface-alt); }
  .ladder-row:last-child { border-bottom: none; }
  .ladder-row.unresolved { background-color: #fffbeb !important; }

  .rank-badge {
    width: 2rem;
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 0.85rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
    margin-right: 0.875rem;
    flex-shrink: 0;
  }
  .ladder-row:nth-child(even) .rank-badge { background: var(--surface-card); }

  /* Rating Badges */
  .rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-weight: 600;
    font-size: 0.95rem;
    padding: 0.35rem 0.65rem;
    border-radius: 6px;
  }
  .rating-high { background-color: var(--tier-high-bg); color: var(--tier-high); }
  .rating-mid { background-color: var(--tier-mid-bg); color: var(--tier-mid); }
  .rating-low { background-color: var(--tier-low-bg); color: var(--tier-low); }

  .badge-default {
    background-color: #fef3c7;
    color: #92400e;
    font-size: 0.7rem;
    padding: 0.2rem 0.4rem;
    margin-left: 0.35rem;
    border-radius: 4px;
    vertical-align: middle;
  }

  /* Player names */
  .player-name { font-weight: 600; font-size: 1rem; color: #1f2937; flex-grow: 1; }
  .player-name a { color: inherit; text-decoration: none; }
  .player-name a:hover { color: var(--color-primary); }
  .not-found { color: var(--color-muted-light); font-style: italic; }
  .player-link { color: var(--color-primary); text-decoration: none; }
  .player-link:hover { text-decoration: underline; }
  .profile-link {
    color: var(--color-muted-light);
    font-size: 0.9rem;
    margin-left: 0.5rem;
    text-decoration: none;
  }
  .profile-link:hover { color: var(--color-primary); }

  /* Team-specific styles */
  .team-rating { font-size: 1.1em; }
  .player-rating { font-size: 0.9em; color: var(--color-muted); }
  .team-dupr {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.1rem;
    font-weight: 700;
    padding: 0.35rem 0.75rem;
    border-radius: 6px;
  }
  .team-dupr.tier-highest { background: #dcfce7; color: #166534; }
  .team-dupr.tier-high { background: #dbeafe; color: #1e40af; }
  .team-dupr.tier-mid { background: #fef3c7; color: #92400e; }
  .team-dupr.tier-low { background: #fee2e2; color: #991b1b; }

  .team-players { display: flex; flex-wrap: wrap; gap: 0.5rem 1.5rem; }
  .player-cell { display: flex; align-items: center; gap: 0.5rem; }
  .individual-ratings {
    display: flex;
    gap: 0.5rem;
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.85rem;
    color: var(--color-muted);
  }
  .team-rank {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 1rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
  }
  .team-row:nth-child(even) .team-rank { background: var(--surface-card); }

  /* Summary */
  .summary-card {
    background: var(--surface-card);
    border-radius: 10px;
    padding: 1rem 1.25rem;
    margin-bottom: 1.5rem;
    border: 1px solid var(--border-color);
  }
  .summary-success { border-left: 4px solid var(--color-success); }
  .summary-warning { border-left: 4px solid var(--color-warning); }
  .unresolved-list {
    background: #fffbeb;
    border-radius: 8px;
    padding: 0.875rem 1rem;
    margin-top: 1rem;
    border: 1px solid #fcd34d;
  }
  .unresolved-list ul { margin: 0; padding-left: 1.25rem; }
  .unresolved-list li { color: #92400e; font-size: 0.9rem; }

  /* Header stats */
  .header-stats {
    display: flex;
    gap: 1.5rem;
    margin-top: 0.5rem;
    font-size: 0.9rem;
    color: var(--color-muted);
  }
  .header-stat { display: flex; align-items: center; gap: 0.35rem; }

  /* Mobile Team Cards (Partner DUPR) */
  .team-cards-mobile { display: none; }
  .team-card {
    background: var(--surface-card);
    border-radius: 10px;
    margin-bottom: 0.75rem;
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .team-card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.875rem 1rem;
    background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-rank {
    font-weight: 800;
    font-size: 1.25rem;
    color: #374151;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }
  .team-card-rank::before {
    content: '#';
    font-weight: 600;
    color: var(--color-muted-light);
    font-size: 1rem;
  }
  .team-card-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.15rem;
    font-weight: 700;
    padding: 0.4rem 0.875rem;
    border-radius: 8px;
  }
  .team-card-body { padding: 0; }
  .team-card-player {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.75rem 1rem;
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-player:last-child { border-bottom: none; }
  .team-card-player:nth-child(odd) { background: var(--surface-card); }
  .team-card-player:nth-child(even) { background: var(--surface-alt); }
  .team-card-player-name {
    font-weight: 600;
    font-size: 0.95rem;
    color: #1f2937;
    flex: 1;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .team-card-player-name a { color: inherit; text-decoration: none; }
  .team-card-player-name a:hover { color: var(--color-primary); }
  .team-card-player-name.not-found { color: var(--color-muted-light); font-style: italic; }
  .team-card-player-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.9rem;
    font-weight: 500;
    color: var(--color-muted);
    margin-left: 1rem;
    flex-shrink: 0;
  }

  /* Responsive */
  @media (max-width: 768px) {
    .page-title { font-size: 1.5rem; }
    .team-players { flex-direction: column; gap: 0.5rem; }
    .pool-header { flex-direction: column; gap: 0.5rem; align-items: flex-start; }
    .ladder-row { flex-wrap: wrap; }
    .header-stats { flex-direction: column; gap: 0.5rem; }

    /* Partner DUPR: Hide table, show cards on mobile */
    .partner-dupr-table { display: none; }
    .team-cards-mobile { display: block; padding: 0.75rem; }
  }

  /* Print styles */
  @media print {
    body { background: white !important; color: black !important; font-size: 10pt; padding: 0; }
    .container { max-width: 100% !important; padding: 0 !important; }
    .pool {
      box-shadow: none !important;
      border: 2px solid #000 !important;
      page-break-inside: avoid;
      margin-bottom: 1rem;
    }
    .pool-header {
      background: #f0f0f0 !important;
      color: black !important;
      border-bottom: 2px solid black !important;
      -webkit-print-color-adjust: exact;
      print-color-adjust: exact;
    }
    .pool-header.pool-a,
    .pool-header.pool-b,
    .pool-header.pool-c,
    .pool-header.pool-d,
    .pool-header.pool-default { background: #f0f0f0 !important; }
    .rating, .team-dupr { background: none !important; border: 1px solid #000; }
    .profile-link { display: none !important; }
    .summary-card { border: 1px solid #000 !important; }
    /* Print: show table, hide mobile cards */
    .partner-dupr-table { display: table !important; }
    .team-cards-mobile { display: none !important; }
    a { color: black !important; text-decoration: none !important; }
  }
</style>

</head>
<body>
  <div class="container">
    <h1 class="page-title">Partner DUPR</h1>
    <p class="page-subtitle">[DATE]</p>
    <div class="header-stats">
      <span class="header-stat">2 Teams</span>
      <span class="header-stat">4/4 players resolved</span>
    </div>

    
    <div class="summary-card summary-success">
      <div style="display: flex; align-items: center;">
        <span style="margin-right: 0.5rem;">[check-circle]</span>
        <span><strong>4/4 players resolved</strong></span>
      </div>
  </div>

    <div class="pool">
      <div class="pool-header pool-a">
        <span class="pool-name">Pool A</span>
        <span class="pool-meta">(2 teams)</span>
      </div>
      <table class="partner-dupr-table">
        <thead>
          <tr>
            <th style="width: 60px;">#</th>
            <th>Team</th>
            <th style="width: 120px; text-align: center;">Ind. DUPR</th>
            <th style="width: 100px; text-align: right;">Team Rating</th>
          </tr>
        </thead>
        <tbody>
          <tr class="team-row">
            <td>
              <div class="team-rank">1</div>
            </td>
            <td>
              <div class="team-players">
                <div class="player-cell">
                  <a href="https://example.com/alice" class="player-link" target="_blank">Alice</a>
                </div>
                <div class="player-cell">
                  <a href="https://example.com/bob" class="player-link" target="_blank">Bob</a>
                </div>
              </div>
            </td>
            <td style="text-align: center;">
              <div class="individual-ratings">
                <span>4.00</span>
                <span>3.50</span>
              </div>
            </td>
            <td style="text-align: right;">
              <span class="team-dupr tier-high">3.67</span>
            </td>
          </tr>
          <tr class="team-row">
            <td>
              <div class="team-rank">2</div>
            </td>
            <td>
              <div class="team-players">
                <div class="player-cell">
                  <a href="https://example.com/carol" class="player-link" target="_blank">Carol</a>
                </div>
                <div class="player-cell">
                  <a href="https://example.com/dave" class="player-link" target="_blank">Dave</a>
                </div>
              </div>
            </td>
            <td style="text-align: center;">
              <div class="individual-ratings">
                <span>3.80</span>
                <span>3.20</span>
              </div>
            </td>
            <td style="text-align: right;">
              <span class="team-dupr tier-mid">3.41</span>
            </td>
          </tr>
        </tbody>
      </table>
      <div class="team-cards-mobile">
        <div class="team-card">
          <div class="team-card-header">
            <span class="team-card-rank">1</span>
            <span class="team-card-rating team-dupr tier-high">3.67</span>
          </div>
          <div class="team-card-body">
            <div class="team-card-player">
              <span class="team-card-player-name"><a href="https://example.com/alice" target="_blank">Alice</a></span>
              <span class="team-card-player-rating">4.00</span>
            </div>
            <div class="team-card-player">
              <span class="team-card-player-name"><a href="https://example.com/bob" target="_blank">Bob</a></span>
              <span class="team-card-player-rating">3.50</span>
            </div>
          </div>
        </div>
        <div class="team-card">
          <div class="team-card-header">
            <span class="team-card-rank">2</span>
            <span class="team-card-rating team-dupr tier-mid">3.41</span>
          </div>
          <div class="team-card-body">
            <div class="team-card-player">
              <span class="team-card-player-name"><a href="https://example.com/carol" target="_blank">Carol</a></span>
              <span class="team-card-player-rating">3.80</span>
            </div>
            <div class="team-card-player">
              <span class="team-card-player-name"><a href="https://example.com/dave" target="_blank">Dave</a></span>
              <span class="team-card-player-rating">3.20</span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
</html>"
`;

exports[`html-generator snapshots should match partner HTML snapshot with mixed found/unfound 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Partner DUPR Results</title>
  
<style>
  :root {
    /* Color System */
    --color-primary: #2563eb;
    --color-primary-dark: #1d4ed8;
    --color-success: #059669;
    --color-success-light: #d1fae5;
    --color-warning: #d97706;
    --color-warning-light: #fef3c7;
    --color-muted: #6b7280;
    --color-muted-light: #9ca3af;

    /* Rating tier colors */
    --tier-high: #059669;
    --tier-high-bg: #d1fae5;
    --tier-mid: #2563eb;
    --tier-mid-bg: #dbeafe;
    --tier-low: #d97706;
    --tier-low-bg: #fef3c7;

    /* Surface colors */
    --surface-card: #ffffff;
    --surface-alt: #f9fafb;
    --border-color: #e5e7eb;

    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
    --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  }

  * { box-sizing: border-box; }
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
    margin: 0;
    padding: 20px;
    background: var(--surface-alt);
    color: #1f2937;
  }
  .container { max-width: 1200px; margin: 0 auto; }

  /* Typography */
  .page-title {
    font-size: 1.75rem;
    font-weight: 700;
    color: #111827;
    margin-bottom: 0.25rem;
  }
  .page-subtitle {
    font-size: 0.9rem;
    color: var(--color-muted);
    margin-bottom: 1rem;
  }

  /* Pool Cards */
  .pool {
    background: var(--surface-card);
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: var(--shadow-sm);
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .pool-header {
    padding: 1rem 1.25rem;
    color: white;
    font-weight: 600;
    font-size: 1.1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .pool-header.pool-a { background: linear-gradient(135deg, #059669 0%, #047857 100%); }
  .pool-header.pool-b { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
  .pool-header.pool-c { background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%); }
  .pool-header.pool-d { background: linear-gradient(135deg, #db2777 0%, #be185d 100%); }
  .pool-header.pool-default { background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); }

  .pool-name { font-size: 1.25rem; font-weight: 700; }
  .pool-meta { font-size: 0.85rem; opacity: 0.9; }

  /* Tables */
  table { width: 100%; border-collapse: collapse; }
  th, td { padding: 12px 16px; text-align: left; border-bottom: 1px solid var(--border-color); }
  th { background: var(--surface-alt); font-weight: 600; color: #374151; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; }
  tr:last-child td { border-bottom: none; }
  tr:hover { background: var(--surface-alt); }

  /* Ladder Rows */
  .ladder-row {
    padding: 0.75rem 1.25rem;
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--border-color);
  }
  .ladder-row:nth-child(even) { background-color: var(--surface-alt); }
  .ladder-row:last-child { border-bottom: none; }
  .ladder-row.unresolved { background-color: #fffbeb !important; }

  .rank-badge {
    width: 2rem;
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 0.85rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
    margin-right: 0.875rem;
    flex-shrink: 0;
  }
  .ladder-row:nth-child(even) .rank-badge { background: var(--surface-card); }

  /* Rating Badges */
  .rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-weight: 600;
    font-size: 0.95rem;
    padding: 0.35rem 0.65rem;
    border-radius: 6px;
  }
  .rating-high { background-color: var(--tier-high-bg); color: var(--tier-high); }
  .rating-mid { background-color: var(--tier-mid-bg); color: var(--tier-mid); }
  .rating-low { background-color: var(--tier-low-bg); color: var(--tier-low); }

  .badge-default {
    background-color: #fef3c7;
    color: #92400e;
    font-size: 0.7rem;
    padding: 0.2rem 0.4rem;
    margin-left: 0.35rem;
    border-radius: 4px;
    vertical-align: middle;
  }

  /* Player names */
  .player-name { font-weight: 600; font-size: 1rem; color: #1f2937; flex-grow: 1; }
  .player-name a { color: inherit; text-decoration: none; }
  .player-name a:hover { color: var(--color-primary); }
  .not-found { color: var(--color-muted-light); font-style: italic; }
  .player-link { color: var(--color-primary); text-decoration: none; }
  .player-link:hover { text-decoration: underline; }
  .profile-link {
    color: var(--color-muted-light);
    font-size: 0.9rem;
    margin-left: 0.5rem;
    text-decoration: none;
  }
  .profile-link:hover { color: var(--color-primary); }

  /* Team-specific styles */
  .team-rating { font-size: 1.1em; }
  .player-rating { font-size: 0.9em; color: var(--color-muted); }
  .team-dupr {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.1rem;
    font-weight: 700;
    padding: 0.35rem 0.75rem;
    border-radius: 6px;
  }
  .team-dupr.tier-highest { background: #dcfce7; color: #166534; }
  .team-dupr.tier-high { background: #dbeafe; color: #1e40af; }
  .team-dupr.tier-mid { background: #fef3c7; color: #92400e; }
  .team-dupr.tier-low { background: #fee2e2; color: #991b1b; }

  .team-players { display: flex; flex-wrap: wrap; gap: 0.5rem 1.5rem; }
  .player-cell { display: flex; align-items: center; gap: 0.5rem; }
  .individual-ratings {
    display: flex;
    gap: 0.5rem;
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.85rem;
    color: var(--color-muted);
  }
  .team-rank {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 1rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
  }
  .team-row:nth-child(even) .team-rank { background: var(--surface-card); }

  /* Summary */
  .summary-card {
    background: var(--surface-card);
    border-radius: 10px;
    padding: 1rem 1.25rem;
    margin-bottom: 1.5rem;
    border: 1px solid var(--border-color);
  }
  .summary-success { border-left: 4px solid var(--color-success); }
  .summary-warning { border-left: 4px solid var(--color-warning); }
  .unresolved-list {
    background: #fffbeb;
    border-radius: 8px;
    padding: 0.875rem 1rem;
    margin-top: 1rem;
    border: 1px solid #fcd34d;
  }
  .unresolved-list ul { margin: 0; padding-left: 1.25rem; }
  .unresolved-list li { color: #92400e; font-size: 0.9rem; }

  /* Header stats */
  .header-stats {
    display: flex;
    gap: 1.5rem;
    margin-top: 0.5rem;
    font-size: 0.9rem;
    color: var(--color-muted);
  }
  .header-stat { display: flex; align-items: center; gap: 0.35rem; }

  /* Mobile Team Cards (Partner DUPR) */
  .team-cards-mobile { display: none; }
  .team-card {
    background: var(--surface-card);
    border-radius: 10px;
    margin-bottom: 0.75rem;
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .team-card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.875rem 1rem;
    background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-rank {
    font-weight: 800;
    font-size: 1.25rem;
    color: #374151;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }
  .team-card-rank::before {
    content: '#';
    font-weight: 600;
    color: var(--color-muted-light);
    font-size: 1rem;
  }
  .team-card-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.15rem;
    font-weight: 700;
    padding: 0.4rem 0.875rem;
    border-radius: 8px;
  }
  .team-card-body { padding: 0; }
  .team-card-player {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.75rem 1rem;
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-player:last-child { border-bottom: none; }
  .team-card-player:nth-child(odd) { background: var(--surface-card); }
  .team-card-player:nth-child(even) { background: var(--surface-alt); }
  .team-card-player-name {
    font-weight: 600;
    font-size: 0.95rem;
    color: #1f2937;
    flex: 1;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .team-card-player-name a { color: inherit; text-decoration: none; }
  .team-card-player-name a:hover { color: var(--color-primary); }
  .team-card-player-name.not-found { color: var(--color-muted-light); font-style: italic; }
  .team-card-player-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.9rem;
    font-weight: 500;
    color: var(--color-muted);
    margin-left: 1rem;
    flex-shrink: 0;
  }

  /* Responsive */
  @media (max-width: 768px) {
    .page-title { font-size: 1.5rem; }
    .team-players { flex-direction: column; gap: 0.5rem; }
    .pool-header { flex-direction: column; gap: 0.5rem; align-items: flex-start; }
    .ladder-row { flex-wrap: wrap; }
    .header-stats { flex-direction: column; gap: 0.5rem; }

    /* Partner DUPR: Hide table, show cards on mobile */
    .partner-dupr-table { display: none; }
    .team-cards-mobile { display: block; padding: 0.75rem; }
  }

  /* Print styles */
  @media print {
    body { background: white !important; color: black !important; font-size: 10pt; padding: 0; }
    .container { max-width: 100% !important; padding: 0 !important; }
    .pool {
      box-shadow: none !important;
      border: 2px solid #000 !important;
      page-break-inside: avoid;
      margin-bottom: 1rem;
    }
    .pool-header {
      background: #f0f0f0 !important;
      color: black !important;
      border-bottom: 2px solid black !important;
      -webkit-print-color-adjust: exact;
      print-color-adjust: exact;
    }
    .pool-header.pool-a,
    .pool-header.pool-b,
    .pool-header.pool-c,
    .pool-header.pool-d,
    .pool-header.pool-default { background: #f0f0f0 !important; }
    .rating, .team-dupr { background: none !important; border: 1px solid #000; }
    .profile-link { display: none !important; }
    .summary-card { border: 1px solid #000 !important; }
    /* Print: show table, hide mobile cards */
    .partner-dupr-table { display: table !important; }
    .team-cards-mobile { display: none !important; }
    a { color: black !important; text-decoration: none !important; }
  }
</style>

</head>
<body>
  <div class="container">
    <h1 class="page-title">Partner DUPR</h1>
    <p class="page-subtitle">[DATE]</p>
    <div class="header-stats">
      <span class="header-stat">1 Teams</span>
      <span class="header-stat">1/2 players resolved</span>
    </div>

    
    <div class="summary-card summary-warning">
      <div style="display: flex; align-items: center;">
        <span style="margin-right: 0.5rem;">[exclamation-triangle]</span>
        <span><strong>1/2 players resolved</strong></span>
      </div>
  
      <div class="unresolved-list">
        <strong style="color: #92400e; font-size: 0.85rem;">Using default rating (2.5):</strong>
        <ul style="margin-top: 0.5rem;">
    <li>Unknown B</li></ul></div></div>

    <div class="pool">
      <div class="pool-header pool-a">
        <span class="pool-name">Pool A</span>
        <span class="pool-meta">(1 teams)</span>
      </div>
      <table class="partner-dupr-table">
        <thead>
          <tr>
            <th style="width: 60px;">#</th>
            <th>Team</th>
            <th style="width: 120px; text-align: center;">Ind. DUPR</th>
            <th style="width: 100px; text-align: right;">Team Rating</th>
          </tr>
        </thead>
        <tbody>
          <tr class="team-row">
            <td>
              <div class="team-rank">1</div>
            </td>
            <td>
              <div class="team-players">
                <div class="player-cell">
                  <a href="https://example.com/found-a" class="player-link" target="_blank">Found A</a>
                </div>
                <div class="player-cell">
                  <span class="not-found">Unknown B</span>
                </div>
              </div>
            </td>
            <td style="text-align: center;">
              <div class="individual-ratings">
                <span>4.00</span>
                <span>3.50</span>
              </div>
            </td>
            <td style="text-align: right;">
              <span class="team-dupr tier-high">3.67</span>
            </td>
          </tr>
        </tbody>
      </table>
      <div class="team-cards-mobile">
        <div class="team-card">
          <div class="team-card-header">
            <span class="team-card-rank">1</span>
            <span class="team-card-rating team-dupr tier-high">3.67</span>
          </div>
          <div class="team-card-body">
            <div class="team-card-player">
              <span class="team-card-player-name"><a href="https://example.com/found-a" target="_blank">Found A</a></span>
              <span class="team-card-player-rating">4.00</span>
            </div>
            <div class="team-card-player">
              <span class="team-card-player-name not-found">Unknown B</span>
              <span class="team-card-player-rating">3.50</span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
</html>"
`;

exports[`html-generator snapshots should match picklebros HTML snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>PickleBros Monday Results</title>
  
<style>
  :root {
    /* Color System */
    --color-primary: #2563eb;
    --color-primary-dark: #1d4ed8;
    --color-success: #059669;
    --color-success-light: #d1fae5;
    --color-warning: #d97706;
    --color-warning-light: #fef3c7;
    --color-muted: #6b7280;
    --color-muted-light: #9ca3af;

    /* Rating tier colors */
    --tier-high: #059669;
    --tier-high-bg: #d1fae5;
    --tier-mid: #2563eb;
    --tier-mid-bg: #dbeafe;
    --tier-low: #d97706;
    --tier-low-bg: #fef3c7;

    /* Surface colors */
    --surface-card: #ffffff;
    --surface-alt: #f9fafb;
    --border-color: #e5e7eb;

    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
    --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  }

  * { box-sizing: border-box; }
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
    margin: 0;
    padding: 20px;
    background: var(--surface-alt);
    color: #1f2937;
  }
  .container { max-width: 1200px; margin: 0 auto; }

  /* Typography */
  .page-title {
    font-size: 1.75rem;
    font-weight: 700;
    color: #111827;
    margin-bottom: 0.25rem;
  }
  .page-subtitle {
    font-size: 0.9rem;
    color: var(--color-muted);
    margin-bottom: 1rem;
  }

  /* Pool Cards */
  .pool {
    background: var(--surface-card);
    border-radius: 12px;
    margin-bottom: 20px;
    box-shadow: var(--shadow-sm);
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .pool-header {
    padding: 1rem 1.25rem;
    color: white;
    font-weight: 600;
    font-size: 1.1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .pool-header.pool-a { background: linear-gradient(135deg, #059669 0%, #047857 100%); }
  .pool-header.pool-b { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
  .pool-header.pool-c { background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%); }
  .pool-header.pool-d { background: linear-gradient(135deg, #db2777 0%, #be185d 100%); }
  .pool-header.pool-default { background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); }

  .pool-name { font-size: 1.25rem; font-weight: 700; }
  .pool-meta { font-size: 0.85rem; opacity: 0.9; }

  /* Tables */
  table { width: 100%; border-collapse: collapse; }
  th, td { padding: 12px 16px; text-align: left; border-bottom: 1px solid var(--border-color); }
  th { background: var(--surface-alt); font-weight: 600; color: #374151; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; }
  tr:last-child td { border-bottom: none; }
  tr:hover { background: var(--surface-alt); }

  /* Ladder Rows */
  .ladder-row {
    padding: 0.75rem 1.25rem;
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--border-color);
  }
  .ladder-row:nth-child(even) { background-color: var(--surface-alt); }
  .ladder-row:last-child { border-bottom: none; }
  .ladder-row.unresolved { background-color: #fffbeb !important; }

  .rank-badge {
    width: 2rem;
    height: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 0.85rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
    margin-right: 0.875rem;
    flex-shrink: 0;
  }
  .ladder-row:nth-child(even) .rank-badge { background: var(--surface-card); }

  /* Rating Badges */
  .rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-weight: 600;
    font-size: 0.95rem;
    padding: 0.35rem 0.65rem;
    border-radius: 6px;
  }
  .rating-high { background-color: var(--tier-high-bg); color: var(--tier-high); }
  .rating-mid { background-color: var(--tier-mid-bg); color: var(--tier-mid); }
  .rating-low { background-color: var(--tier-low-bg); color: var(--tier-low); }

  .badge-default {
    background-color: #fef3c7;
    color: #92400e;
    font-size: 0.7rem;
    padding: 0.2rem 0.4rem;
    margin-left: 0.35rem;
    border-radius: 4px;
    vertical-align: middle;
  }

  /* Player names */
  .player-name { font-weight: 600; font-size: 1rem; color: #1f2937; flex-grow: 1; }
  .player-name a { color: inherit; text-decoration: none; }
  .player-name a:hover { color: var(--color-primary); }
  .not-found { color: var(--color-muted-light); font-style: italic; }
  .player-link { color: var(--color-primary); text-decoration: none; }
  .player-link:hover { text-decoration: underline; }
  .profile-link {
    color: var(--color-muted-light);
    font-size: 0.9rem;
    margin-left: 0.5rem;
    text-decoration: none;
  }
  .profile-link:hover { color: var(--color-primary); }

  /* Team-specific styles */
  .team-rating { font-size: 1.1em; }
  .player-rating { font-size: 0.9em; color: var(--color-muted); }
  .team-dupr {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.1rem;
    font-weight: 700;
    padding: 0.35rem 0.75rem;
    border-radius: 6px;
  }
  .team-dupr.tier-highest { background: #dcfce7; color: #166534; }
  .team-dupr.tier-high { background: #dbeafe; color: #1e40af; }
  .team-dupr.tier-mid { background: #fef3c7; color: #92400e; }
  .team-dupr.tier-low { background: #fee2e2; color: #991b1b; }

  .team-players { display: flex; flex-wrap: wrap; gap: 0.5rem 1.5rem; }
  .player-cell { display: flex; align-items: center; gap: 0.5rem; }
  .individual-ratings {
    display: flex;
    gap: 0.5rem;
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.85rem;
    color: var(--color-muted);
  }
  .team-rank {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    font-size: 1rem;
    color: var(--color-muted);
    background: var(--surface-alt);
    border-radius: 50%;
  }
  .team-row:nth-child(even) .team-rank { background: var(--surface-card); }

  /* Summary */
  .summary-card {
    background: var(--surface-card);
    border-radius: 10px;
    padding: 1rem 1.25rem;
    margin-bottom: 1.5rem;
    border: 1px solid var(--border-color);
  }
  .summary-success { border-left: 4px solid var(--color-success); }
  .summary-warning { border-left: 4px solid var(--color-warning); }
  .unresolved-list {
    background: #fffbeb;
    border-radius: 8px;
    padding: 0.875rem 1rem;
    margin-top: 1rem;
    border: 1px solid #fcd34d;
  }
  .unresolved-list ul { margin: 0; padding-left: 1.25rem; }
  .unresolved-list li { color: #92400e; font-size: 0.9rem; }

  /* Header stats */
  .header-stats {
    display: flex;
    gap: 1.5rem;
    margin-top: 0.5rem;
    font-size: 0.9rem;
    color: var(--color-muted);
  }
  .header-stat { display: flex; align-items: center; gap: 0.35rem; }

  /* Mobile Team Cards (Partner DUPR) */
  .team-cards-mobile { display: none; }
  .team-card {
    background: var(--surface-card);
    border-radius: 10px;
    margin-bottom: 0.75rem;
    border: 1px solid var(--border-color);
    overflow: hidden;
  }
  .team-card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.875rem 1rem;
    background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-rank {
    font-weight: 800;
    font-size: 1.25rem;
    color: #374151;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }
  .team-card-rank::before {
    content: '#';
    font-weight: 600;
    color: var(--color-muted-light);
    font-size: 1rem;
  }
  .team-card-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 1.15rem;
    font-weight: 700;
    padding: 0.4rem 0.875rem;
    border-radius: 8px;
  }
  .team-card-body { padding: 0; }
  .team-card-player {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.75rem 1rem;
    border-bottom: 1px solid var(--border-color);
  }
  .team-card-player:last-child { border-bottom: none; }
  .team-card-player:nth-child(odd) { background: var(--surface-card); }
  .team-card-player:nth-child(even) { background: var(--surface-alt); }
  .team-card-player-name {
    font-weight: 600;
    font-size: 0.95rem;
    color: #1f2937;
    flex: 1;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .team-card-player-name a { color: inherit; text-decoration: none; }
  .team-card-player-name a:hover { color: var(--color-primary); }
  .team-card-player-name.not-found { color: var(--color-muted-light); font-style: italic; }
  .team-card-player-rating {
    font-family: 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', monospace;
    font-size: 0.9rem;
    font-weight: 500;
    color: var(--color-muted);
    margin-left: 1rem;
    flex-shrink: 0;
  }

  /* Responsive */
  @media (max-width: 768px) {
    .page-title { font-size: 1.5rem; }
    .team-players { flex-direction: column; gap: 0.5rem; }
    .pool-header { flex-direction: column; gap: 0.5rem; align-items: flex-start; }
    .ladder-row { flex-wrap: wrap; }
    .header-stats { flex-direction: column; gap: 0.5rem; }

    /* Partner DUPR: Hide table, show cards on mobile */
    .partner-dupr-table { display: none; }
    .team-cards-mobile { display: block; padding: 0.75rem; }
  }

  /* Print styles */
  @media print {
    body { background: white !important; color: black !important; font-size: 10pt; padding: 0; }
    .container { max-width: 100% !important; padding: 0 !important; }
    .pool {
      box-shadow: none !important;
      border: 2px solid #000 !important;
      page-break-inside: avoid;
      margin-bottom: 1rem;
    }
    .pool-header {
      background: #f0f0f0 !important;
      color: black !important;
      border-bottom: 2px solid black !important;
      -webkit-print-color-adjust: exact;
      print-color-adjust: exact;
    }
    .pool-header.pool-a,
    .pool-header.pool-b,
    .pool-header.pool-c,
    .pool-header.pool-d,
    .pool-header.pool-default { background: #f0f0f0 !important; }
    .rating, .team-dupr { background: none !important; border: 1px solid #000; }
    .profile-link { display: none !important; }
    .summary-card { border: 1px solid #000 !important; }
    /* Print: show table, hide mobile cards */
    .partner-dupr-table { display: table !important; }
    .team-cards-mobile { display: none !important; }
    a { color: black !important; text-decoration: none !important; }
  }
</style>

</head>
<body>
  <div class="container">
    <h1 class="page-title">PickleBros Monday</h1>
    <p class="page-subtitle">[DATE] | Fixed 4-Player Pools</p>

    
    <div class="summary-card summary-success">
      <div style="display: flex; align-items: center;">
        <span style="margin-right: 0.5rem;">[check-circle]</span>
        <span><strong>8/8 players resolved</strong></span>
      </div>
  </div>

    <div class="pool">
      <div class="pool-header pool-a">
        <span class="pool-name">POOL A</span>
        <span class="pool-meta">(4 players)</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">1</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 1</span><a href="https://example.com/player-1" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-high">4.00</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">2</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 2</span><a href="https://example.com/player-2" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.90</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">3</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 3</span><a href="https://example.com/player-3" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.80</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">4</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 4</span><a href="https://example.com/player-4" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.70</span>
      </div>
    </div>

    <div class="pool">
      <div class="pool-header pool-b">
        <span class="pool-name">POOL B</span>
        <span class="pool-meta">(4 players)</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">1</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 5</span><a href="https://example.com/player-5" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.60</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">2</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 6</span><a href="https://example.com/player-6" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.50</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">3</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 7</span><a href="https://example.com/player-7" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.40</span>
      </div>
      <div class="ladder-row">
        <span class="rank-badge">4</span>
        <div class="player-name" style="flex-grow: 1;">
          <span class="player-name">Player 8</span><a href="https://example.com/player-8" target="_blank" class="profile-link" title="View DUPR Profile">[link]</a>
        </div>
        <span class="rating rating-mid">3.30</span>
      </div>
    </div>
  </div>
</body>
</html>"
`;
